sidebar flow with content fixed, invite link added to SOD page, sidebar made scrollable, default scrollbar customised

--- a/_sass/_helper.scss
+++ b/_sass/_helper.scss
@@ -2,10 +2,11 @@
 	display: flex;
 	align-items: flex-start;
 	position: relative;
+	width: 100%;
 
-	// .container{
-	//   width: 100%;
-	// }
+	.highlighter-rouge{
+		// width: 50%;
+	}
 }
 
 .selected-link {
@@ -19,10 +20,11 @@
 .sidebar {
 	position: sticky;
 	top: 125px;
-	height: 100%;
+	max-height: calc(100vh - 150px);
+	overflow: auto;
 	flex-shrink: 0;
 	// flex-grow: 0;
-	width: 320px;
+	width: 300px;
 	background: #eee;
 	border-left: 2px solid #ccc;
 	padding: 10px 0px 10px 25px;
@@ -33,7 +35,7 @@
 	font-size: 0.75em;
 
 	a {
-		margin-bottom:0px;
+		margin-bottom: 0px;
 	}
 
 	a span {
@@ -96,6 +98,7 @@
 	top: 0;
 	position: fixed;
 	height: 100%;
+	overflow: auto;
 	width: 100vw;
 	z-index: 2;
 	background: #f7f7f7;
@@ -335,4 +338,24 @@
 	#menu-toggle-btn {
 		display: inline-block;
 	}
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
 }
